--- a/src/app/details/details.component.html
+++ b/src/app/details/details.component.html
@@ -20,4 +20,5 @@
         <div class="investigate-btn">Ivestigate Attack</div>
         <div class="feedback-btn">Give Feedback </div>
     </div>
+    <app-footer></app-footer>
 </div>
