--- a/src/app/footer2/footer2.component.css
+++ b/src/app/footer2/footer2.component.css
@@ -1,9 +1,9 @@
 footer {
     background-color: rgb(57, 176, 184); /* Bleu acier clair */
-    color: #defbff; /* Light blue text */
-    width: 100%; /* Assure que le footer prend toute la largeur */
+    color: hsl(187, 100%, 94%); /* Light blue text */
+    width: 2263px; /* Assure que le footer prend toute la largeur */
     box-sizing: border-box; /* Inclut padding et border dans la largeur */
-    top: 97vh;
+    top: 2600px;
     position:absolute;
   }
   
