--- a/src/app/header1/header1.component.html
+++ b/src/app/header1/header1.component.html
@@ -9,5 +9,5 @@
             <li routerLinkActive="active"><a routerLink="/contact">Contact</a></li>
         </ul>
     </nav>
-    <button class="login-btn">Login</button>
+    <button routerLink="/login" class="login-btn">Login</button>
 </div>
