--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -5,6 +5,6 @@
         <p>Detecting Cyber Threats</p>
         <p>Stay Informed, Stay Secure!</p>
     </div>
-    <button class="get-started-button">Get Started</button>
+    <button routerLink="/signup" class="get-started-button">Get Started</button>
 </div>
 
