--- a/src/app/alert-brute/alert-brute.component.html
+++ b/src/app/alert-brute/alert-brute.component.html
@@ -5,12 +5,12 @@
         <div class="alertpic">
             <img src='../../assets/alertpic.png' alt="don't panic">
         </div>
-        <div class="title-text">DDOS Attack Detected!</div>
-        <div class="explanation-text">A potential DDOS attack has been identified. Immediate attention is required.</div>
+        <div class="title-text">Brute Force Attack Detected!</div>
+        <div class="explanation-text">A potential Brute Force attack has been identified. Immediate attention is required.</div>
         <div class="buttons-container">
             <button routerLink="/details" class="button">View Details</button>
             <button class="button">Search Attack</button>
-            <button routerLink="/ddos" class="button">Ignore Alert</button>
+            <button routerLink="/bruteforce" class="button">Ignore Alert</button>
         </div>
     </div>
     <app-footer></app-footer>
