--- a/src/app/feedback/feedback.component.css
+++ b/src/app/feedback/feedback.component.css
@@ -34,7 +34,7 @@
     text-align: center;
 }
 
-.feedback-container input[type="text"] {
+.feedback-container textarea {
     position: absolute;
     width: 700px; 
     height: 200px;
@@ -49,7 +49,7 @@
     
 }
 
-.feedback-container button {
+.s2 button {
     position: absolute;
     border-width:5px;
     border-radius: 15px;
@@ -64,6 +64,6 @@
     left: 43%;
 }
 
-.feedback-container button:hover {
+.s2 button:hover {
     background-color: #4a3416; /* Darkens button on hover */
 }
