for-salma-et-moetaz

--- a/src/app/alert-sql/alert-sql.component.html
+++ b/src/app/alert-sql/alert-sql.component.html
@@ -8,7 +8,7 @@
         <div class="title-text">SQL Injection Attack Detected!</div>
         <div class="explanation-text">A potential SQL Injection attack has been identified. Immediate attention is required.</div>
         <div class="buttons-container">
-            <button routerLink="/details" class="button">View Details</button>
+            <button routerLink="/details-sql" class="button">View Details</button>
             <button class="button">Search Attack</button>
             <button routerLink="/sql" class="button">Ignore Alert</button>
         </div>
