--- a/src/app/alert/alert.component.html
+++ b/src/app/alert/alert.component.html
@@ -8,7 +8,7 @@
         <div class="title-text">DDOS Attack Detected!</div>
         <div class="explanation-text">A potential DDOS attack has been identified. Immediate attention is required.</div>
         <div class="buttons-container">
-            <button routerLink="/details" class="button">View Details</button>
+            <button routerLink="/details-ddos" class="button">View Details</button>
             <button class="button">Search Attack</button>
             <button routerLink="/ddos" class="button">Ignore Alert</button>
         </div>
