--- a/src/app/ddos-detection/ddos-detection.component.html
+++ b/src/app/ddos-detection/ddos-detection.component.html
@@ -3,7 +3,7 @@
         <app-header2></app-header2>
     </div>
     <img class="pic" src='../../assets/detection.png' alt="detection">
-    <img class="back" src='../../assets/back.png' alt="back">
+    <img routerLink="/vue-analyst" class="back" src='../../assets/back.png' alt="back" >
     <div class="body">
         <h1>DDOS Detection - Stay away of Disruptions</h1>
         <div class="content">
