--- a/src/app/details-sql/details-sql.component.html
+++ b/src/app/details-sql/details-sql.component.html
@@ -17,7 +17,7 @@
         </div>
     </div>
     <div class="buttons">
-        <div class="investigate-btn">Ivestigate Attack</div>
+        <div class="investigate-btn"><a href="https://cheatsheetseries.owasp.org/cheatsheets/SQL_Injection_Prevention_Cheat_Sheet.html" target="_blank">Countermeasures</a></div>
         <div class="feedback-btn"><button routerLink="/feedback">Give Feedback </button></div>
     </div>
     <app-footer></app-footer>
