--- a/src/app/alert-brute/alert-brute.component.html
+++ b/src/app/alert-brute/alert-brute.component.html
@@ -8,7 +8,7 @@
         <div class="title-text">Brute Force Attack Detected!</div>
         <div class="explanation-text">A potential Brute Force attack has been identified. Immediate attention is required.</div>
         <div class="buttons-container">
-            <button routerLink="/details" class="button">View Details</button>
+            <button routerLink="/details-brute" class="button">View Details</button>
             <button class="button">Search Attack</button>
             <button routerLink="/bruteforce" class="button">Ignore Alert</button>
         </div>
