--- a/src/app/bruteforce-detection/bruteforce-detection.component.html
+++ b/src/app/bruteforce-detection/bruteforce-detection.component.html
@@ -3,7 +3,7 @@
         <app-header2></app-header2>
     </div>
     <img class="pic" src='../../assets/detection.png' alt="detection">
-    <img class="back" src='../../assets/back.png' alt="back">
+    <img routerLink="/vue-analyst" class="back" src='../../assets/back.png' alt="back" >
     <div class="body">
         <h1>Brute Force Attack Detection - Strengthen Your Defenses</h1>
         <div class="content">
@@ -24,10 +24,10 @@
                 <input type="text" id="data" name="data" placeholder="Enter your data">
             </div>
             <div class="info4">
-                <p> Upload log files or data containing login attempts for comprehensive analysis. Our system processes these files to identify patterns indicative of a brute force attack.</p>
-            </div>
-        </div>
-        <button type="submit">Analyze</button>
+                <input type="file" #fileInput style="display: none;" (change)="onFileSelected($event)">
+                <button id="importButton" class="import-button" (click)="fileInput.click()">Upload log files or data containing login attempts for comprehensive analysis. Our system processes these files to identify patterns indicative of a brute force attack.</button>
+                <button id="analyzeButton" class="analyze-button" (click)="analyzeFile()">Analyze</button>
+            </div>    
     </div>
     <app-footer2></app-footer2>
 </div>
