--- a/src/app/details/details.component.html
+++ b/src/app/details/details.component.html
@@ -17,7 +17,7 @@
         </div>
     </div>
     <div class="buttons">
-        <div class="investigate-btn">Ivestigate Attack</div>
+        <div class="investigate-btn"><a href="https://www.cloudflare.com/ddos/" target="_blank">Countermeasures</a></div>
         <div class="feedback-btn"><button routerLink="/feedback">Give Feedback </button></div>
     </div>
     <app-footer></app-footer>
