--- a/src/app/header2/header2.component.html
+++ b/src/app/header2/header2.component.html
@@ -5,6 +5,6 @@
         <img class="user-icon" src="../../assets/username.png" alt="user icon">
         <div class="username">Username</div>
       </div>
-      <div class="logout-btn">Logout</div>
+      <div class="logout-btn"><button routerLink="/home" id="btn" type="login">LOGOUT</button></div>
 </div>
 
