--- a/src/app/password-recovery/password-recovery.component.html
+++ b/src/app/password-recovery/password-recovery.component.html
@@ -6,7 +6,7 @@
     </div>
     <img class="pic" src='../../assets/password-recovery.png' alt="password">
     <div class="body">
-        <img class="back" src='../../assets/back.png' alt="back">
+        <img class="back" src='../../assets/back.png' alt="back" (click)="goBack()">
         <div class="title-text">Password Recovery</div>
         <div class="explanation-text">Enter your email to recover your password...</div>
         <div class="email-info">
