--- a/src/app/signup/signup.component.css
+++ b/src/app/signup/signup.component.css
@@ -11,7 +11,7 @@
     width: 90px;
     height: 90px;
 }
-.form{
+.login-container form{
     position: absolute;
     top: 235px;
     left: 12%;
@@ -28,56 +28,142 @@
     text-align: center;
 }
 .username input::placeholder,.email input::placeholder,.password input::placeholder,.Cpassword input::placeholder {
-    color: #c3bbbb; /* Set your desired color */
-    opacity: 1; /* Optional: Adjust if you need to change the opacity */
+    color: #bbc3c3; 
+    opacity: 1; 
 }
 
-.camera img{
+.password span {
+    cursor: pointer;  
+    color: aliceblue; 
+    margin-left: 15px; 
+    font-size: 25px;
+  }
+  
+  .password span:hover {
+    text-decoration: underline; 
+  }
+
+  .Cpassword span {
+    cursor: pointer;  
+    color: aliceblue; 
+    margin-left: 15px; 
+    font-size: 25px;
+  }
+  
+  .Cpassword span:hover {
+    text-decoration: underline; 
+  }
+  
+
+.camera{
+    width: 320px;
+    height: 400px ;
+    border: 5px solid aquamarine;
+    position: absolute;
     top: 300px;
-    left: 65%;
+    left: 47%;
+    z-index: 2;
+}
+.camera img{
+    top: 130px;
+    left: 20%;
     width: 180px;
     height: 130px;
-    position: absolute;
+    position:absolute;
 }
 
 .edit img{
-    top: 370px;
-    left: 72.7%;
+    top: 680px;
+    left: 61.5%;
     width: 50px;
     height: 50px;
     position: absolute;
 }
-.edit{
+.generate{
     display: flex;
+    top: 750px;
+    left: 48%;
+    position: absolute;
 }
-.edit input{
+.generate input{
     width: 30px;
     height: 30px;
     margin-right: 10px;
 }
 
-.edit label{
+.generate label{
     color: beige;
     font-size: 25px;
+}
+.checkboxes1{
     position: absolute;
     top: 350px;
-    left: 79%;
+    left: 69%;  
     
 }
-
-.checkboxes input{
+.checkboxes1 input{
     width: 30px;
     height: 30px;
     margin-right: 10px;
 }
 
-.checkboxes label{
+.checkboxes1 label{
     color: beige;
     font-size: 25px;
-    position: absolute;
-    top: 450px;
-    left: 79%;
-    
+    margin-right: 100px;  
 }
 
+.checkboxes2{
+    position: absolute;
+    top: 460px;
+    left: 69%;  
+}
+.checkboxes2 input{
+    width: 30px;
+    height: 30px;
+    margin-right: 10px;
+}
+
+.checkboxes2 label{
+    color: beige;
+    font-size: 25px; 
+}
+
+.btn button {
+    background-color: transparent;
+    color: rgb(246, 255, 252);
+    width: 200px;
+    height: 80px;
+    padding: 10px 20px;
+    border: 5px solid #D5FF5E;
+    border-radius: 12px;
+    cursor: pointer;
+    font-size: 30px;
+    margin-left: 150px;
+    top: 560px;
+    left: 66%;
+    position: absolute;
+}
+
+.btn button:hover{
+    background-color: rgb(2, 4, 29);
+}
+
+.already {
+    color: blanchedalmond;
+    font-size: 20px;
+    position: absolute;
+    top: 690px;
+    left: 70%;
+}
+
+.signin {
+    color:red; 
+    display: inline-block;
+    margin-left: 5px;
+}
+
+.underlined {
+    text-decoration: underline;
+}
 
