--- a/src/app/alert-sql/alert-sql.component.html
+++ b/src/app/alert-sql/alert-sql.component.html
@@ -9,7 +9,7 @@
         <div class="explanation-text">A potential SQL Injection attack has been identified. Immediate attention is required.</div>
         <div class="buttons-container">
             <button routerLink="/details-sql" class="button">View Details</button>
-            <button class="button">Search Attack</button>
+            <button class="button"><a href="https://portswigger.net/web-security/sql-injection" target="_blank">Search Attack</a></button>
             <button routerLink="/sql" class="button">Ignore Alert</button>
         </div>
     </div>
