--- a/src/app/alert/alert.component.css
+++ b/src/app/alert/alert.component.css
@@ -77,6 +77,7 @@
 }
 
 .button {
+    text-decoration: none; /* Remove underline */
     font-size: 30px;
     font-weight: bold;
     font-family:  cursive; 
@@ -92,3 +93,7 @@
 .button:hover {
     background-color: #d49a05; /* Change background color on hover */
 }
+.button a {
+    text-decoration: none; /* Remove underline */
+    color: #000; /* Change color to black */
+  }
