--- a/src/app/alert/alert.component.html
+++ b/src/app/alert/alert.component.html
@@ -9,7 +9,7 @@
         <div class="explanation-text">A potential DDOS attack has been identified. Immediate attention is required.</div>
         <div class="buttons-container">
             <button routerLink="/details-ddos" class="button">View Details</button>
-            <button class="button">Search Attack</button>
+            <div class="button"><a href="https://www.akamai.com/fr/glossary/what-is-ddos#:~:text=Dans%20le%20cadre%20d'une,r%C3%A9seau%20avec%20du%20trafic%20malveillant." target="_blank">Search Attack</a></div>
             <button routerLink="/ddos" class="button">Ignore Alert</button>
         </div>
     </div>
