--- a/src/app/header2/header2.component.html
+++ b/src/app/header2/header2.component.html
@@ -1,6 +1,7 @@
 <div class="header">
+  <a routerLink="/home">
     <img class="logo" src="../../assets/logo.png" alt="Logo">
-    <span class="project-name">CyberGuard</span>
+    <span class="project-name">CyberGuard</span></a>
     <div class="user-info">
         <img class="user-icon" src="../../assets/username.png" alt="user icon">
         <div class="username">Username</div>
