--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,5 +1,8 @@
 <div class="home-container">
-    <app-header1></app-header1>
+    <div class="header">
+        <app-header1></app-header1>
+    </div>
+    <img class="pic" src='../../assets/home.png' alt="home">
     <div class="cyberguard-promise">
         <p>CyberGuard's Promise:</p>
         <p>Detecting Cyber Threats</p>
