--- a/src/app/team/team.component.html
+++ b/src/app/team/team.component.html
@@ -18,7 +18,7 @@
             </div>
         </div>
         <div class="member">
-            <img src="../assets/hasna.jpg" alt="hasna">
+            <img src="../assets/hasna.png" alt="hasna">
             <h2>Khantouche Hasna</h2>
             <div class="social-icons">
             <a href="https://www.facebook.com/asuna.kanatouchy?locale=fr_FR" target="_blank" rel="noreferrer"><img src="../assets/fbt.png" alt="fbt"></a>
@@ -27,7 +27,7 @@
         </div>
         </div>
         <div class="member">
-            <img src="../assets/salma.jpg" alt="fbt">
+            <img src="../assets/salma.png" alt="fbt">
             <h2>Makina Salma</h2>
             <div class="social-icons">
             <a href="https://www.facebook.com/profile.php?id=100055834089001&locale=fr_FR" target="_blank" rel="noreferrer"><img src="../assets/fbt.png" alt="fbt"></a>
