--- a/src/app/user-management/user-management.component.html
+++ b/src/app/user-management/user-management.component.html
@@ -3,7 +3,7 @@
         <app-header2></app-header2>
     </div>
     <img class="pic" src='../../assets/user-management.png' alt="manage">
-    <img class="back" src='../../assets/back.png' alt="back">
+    <img routerLink="/vue-admin" class="back" src='../../assets/back.png' alt="back">
     <div class="body">
         <h1>User Management</h1>
         <div class="section1">
