--- a/src/app/alert-brute/alert-brute.component.html
+++ b/src/app/alert-brute/alert-brute.component.html
@@ -9,7 +9,7 @@
         <div class="explanation-text">A potential Brute Force attack has been identified. Immediate attention is required.</div>
         <div class="buttons-container">
             <button routerLink="/details-brute" class="button">View Details</button>
-            <button class="button">Search Attack</button>
+            <button class="button"><a href="https://www.fortinet.com/resources/cyberglossary/brute-force-attack#:~:text=A%20brute%20force%20attack%20is,and%20organizations'%20systems%20and%20networks." target="_blank">Search Attack</a></button>
             <button routerLink="/bruteforce" class="button">Ignore Alert</button>
         </div>
     </div>
