--- a/src/app/footer2/footer2.component.html
+++ b/src/app/footer2/footer2.component.html
@@ -20,7 +20,7 @@
             <div class="common-logo-size">
             <ul>
                 <li><img src="../assets/phone.png" alt="Phone"><p>(+216) 21 456 789</p></li>
-                <li><img src="../assets/emailf.png" alt="Email"><p><a href="mailto:info@example.com" target="_blank" rel="noreferrer">cyberguard&#64;gmail.com</a></p></li>
+                <li><img src="../assets/emailf.png" alt="Email"><p><a href="mailto:info@example.com" target="_blank" rel="noreferrer">cyberguard62&#64;gmail.com</a></p></li>
                 <li><img src="../assets/adress.png" alt="Address"><p>ENSI, Mannouba, Tunis</p></li>
             </ul></div>
         </div>
