--- a/src/app/password-recovery/password-recovery.component.html
+++ b/src/app/password-recovery/password-recovery.component.html
@@ -11,9 +11,9 @@
         <div class="explanation-text">Enter your email to recover your password...</div>
         <div class="email-info">
             <img class="email-icon" src="../../assets/email.png" alt="email icon">
-            <input class="email-input" type="text" value="name@example.com">
+            <input class="email-input" type="email" id="email" name="email" placeholder="name@example.com" required [(ngModel)]="email">
           </div>
-          <div class="recover-btn">Recover Password</div>
+          <div class="recover-btn" (click)="password_recovery()">Recover Password</div>
     </div>
     <app-footer></app-footer>
 </div>
