--- a/src/app/vue-admin/vue-admin.component.css
+++ b/src/app/vue-admin/vue-admin.component.css
@@ -37,25 +37,68 @@
     font-weight: lighter;
     width: 330px;
 }
-.part1{
+.part1 {
     display: block;
+    position: absolute;
+    top: 280px; /* Adjust the top position of the container */
+    left: 850px; /* Adjust the left position of the container */
 }
-.s1 h5{
+
+.part1 h5 {
     position: absolute;
     color: white;
     font-size: 20px;
     font-weight: lighter;
-    top: 300px;
-    left: 600px;
     width: 300px;
-    margin-top: 20px;
+    margin-bottom: 20px;
 }
+
+.part1 h5:nth-child(1) {
+    top: 0; /* Position of the first h5 element */
+}
+
+.part1 h5:nth-child(2) {
+    top: 40px; /* Position of the second h5 element */
+}
+
+.part1 h5:nth-child(3) {
+    top: 80px; /* Position of the third h5 element */
+}
+
 .vertical-line {
     border-left: 6px solid #9BB7FF; /* Specify the width, style, and color of the border */
     height: 180px; /* Specify the height of the line */
     left: 1140px;
     top: 290px;
     position: absolute;
+}
+
+.part2 {
+    display: block;
+    position: absolute;
+    top: 270px; /* Adjust the top position of the container */
+    left: 1200px; /* Adjust the left position of the container */
+}
+
+.part2 h6 {
+    position: absolute;
+    color: white;
+    font-size: 20px;
+    font-weight: lighter;
+    width: 500px;
+    margin-bottom: 20px;
+}
+
+.part2 h6:nth-child(1) {
+    top: 0; /* Position of the first h5 element */
+}
+
+.part2 h6:nth-child(2) {
+    top: 40px; /* Position of the second h5 element */
+}
+
+.part2 h6:nth-child(3) {
+    top: 80px; /* Position of the third h5 element */
 }
 
 .s2{
