--- a/src/app/vue-admin/vue-admin.component.html
+++ b/src/app/vue-admin/vue-admin.component.html
@@ -13,9 +13,11 @@
             <h5>System Health: Good</h5>
         </div>
         <div class="vertical-line"></div>
-        <h6>Last Backup: March 20, 2024</h6>
-        <h6>Active Users: 5 analysts, 1 admin</h6>
-        <h6>System Logs: Last log entry on March 23, 2024</h6>
+        <div class="part2">
+            <h6>Last Backup: March 20, 2024</h6>
+            <h6>Active Users: 5 analysts, 1 admin</h6>
+            <h6>System Logs: Last log entry on March 23, 2024</h6>
+        </div> 
     </div>
     <div class="s2">
         <div id="manage" class="manage">
